# ecoTracker

./: pyproject.toml  render.yaml  requirements.txt  start.sh
core/: settings.py  urls.py
ecoTracker/: api.py  apps.py  auth.py  models.py  schemas.py
ecoTracker/migrations/: 0001_initial.py
ecoTracker/routes/: actions.py  user.py
